Added demo file for video creation

--- a/Quantum EOS Software Demo.ipynb
+++ b/Quantum EOS Software Demo.ipynb
@@ -1,82 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "b746e5d5",
-   "metadata": {},
-   "source": [
-    "<div>\n",
-    "    <img src=\"assets/intro_page.png\" />\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c17091f",
-   "metadata": {},
-   "source": [
-    "<div>\n",
-    "    <img src=\"assets/team_info.png\" />\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b31e9496",
-   "metadata": {},
-   "source": [
-    "<!-- <div>\n",
-    "    <img src=\"assets/eos-white-paper.png\" height=100 width=600 />\n",
-    "</div> -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b299c3af",
-   "metadata": {},
-   "source": [
-    "#### Why optimizing scheduling of EOS is complex?\n",
-    "\n",
-    "It is a complicated process because observing and downloading operations are both involved. There could be multiple constraints such as:  \n",
-    "* Energy constraints.\n",
-    "* Storage capacity constraints.\n",
-    "* Priority of targets.\n",
-    "* Camera cooling time.\n",
-    "* Downlink window time.\n",
-    "* Weather\n",
-    "\n",
-    "<div>\n",
-    "    <img src=\"assets/combinatorial_graph.png\" width=300 height=300 />\n",
-    "</div>\n",
-    "\n",
-    "#### Different ways to choose K targets based on constraints from N targets areas:\n",
-    "\n",
-    "> - Total targets to be captured (N): **10**\n",
-    "> - Maximum number of Targets that can be captured (K): **4**\n",
-    "> - The number of combinations: **210**\n",
-    "\n",
-    "> - Total targets to be captured (N): **1000**\n",
-    "> - Maximum number of Targets that can be captured (K): **40**\n",
-    "> - The number of combinations: **5.559 × 10<sup>71</sup>** = 555974423571664033815804589243553849851258056649719919687842027223208475\n",
-    "\n",
-    "> - Total targets to be captured (N): **10000**\n",
-    "> - Maximum number of Targets that can be captured (K): **400**\n",
-    "> - The number of combinations: **4.795 × 10<sup>727</sup>** = <br/> 47953478261501253667518020784435637132114965271313799316781462449149\n",
-    "214650033400703470743207345968679460776799962328406560915869\n",
-    "352354331616530991650822177998481679806327065903042680855980\n",
-    "964994595378861668131464705731615307216559733492218713673030\n",
-    "669126381758869052675286327079937854208809975963819974719874\n",
-    "186448381659696986276909913453033337532216222650290882103044\n",
-    "555478352495184777551227004422114459648346246551941419164594\n",
-    "115925617106600942460093121185742339417176522115382029810644\n",
-    "685297076945957266413317536670370108362134015598512630270703\n",
-    "643930213446963569536593737354425779281636800914818234805127\n",
-    "053615090992371353583058941047862463353702265438628656607818\n",
-    "462308287752268723674096607972711131843645694689689568180100\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4a793544",
@@ -86,9 +10,7 @@
     "import pandas as pd\n",
     "import json\n",
     "import requests\n",
-    "import seaborn as sns\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "import seaborn as sns"
    ]
   },
   {
@@ -98,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_file = 'data/data-eos-5.xlsx'\n",
+    "excel_file = 'data/eos.xlsx'\n",
     "eos_data_df = pd.read_excel(excel_file, nrows=1)"
    ]
   },
@@ -503,80 +425,6 @@
    "source": [
     "(eos_benchmark_df['Total Priority (Gurobi Optimizer)'] == 0).sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e470e568",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "505739cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87a80b86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3ce59f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f787f046",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81cdb1b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4729f2a7",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<div>\n",
-    "    <img src=\"assets/mars-paper.png\" height=100 width=600 />\n",
-    "</div>\n",
-    "\n",
-    "<div>\n",
-    "    <img src=\"assets/space-debris-white-paper.png\" height=100 width=600 />\n",
-    "</div>\n",
-    "<div>\n",
-    "    <img src=\"assets/satellite-placement-white-paper.png\" height=100 width=600 />\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9734592",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -595,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
