--- a/EOS Scheduling Optimization Demo.ipynb
+++ b/EOS Scheduling Optimization Demo.ipynb
@@ -223,6 +223,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a362496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"input_json\": [{\"Targets\": \"['T18', 'T43', 'T10', 'T26', 'T36', 'T11', 'T44', 'T20', 'T45', 'T31', 'T12', 'T15', 'T46', 'T33', 'T34', 'T38', 'T35', 'T23', 'T27', 'T40', 'T19', 'T30', 'T37', 'T13', 'T32', 'T29', 'T41', 'T25', 'T24', 'T21', 'T17', 'T22', 'T39', 'T42', 'T14', 'T16']\", \"Priorities\": \"[30, 3, 9, 26, 14, 10, 29, 27, 2, 11, 24, 18, 8, 5, 15, 25, 31, 28, 33, 20, 34, 12, 1, 23, 6, 17, 21, 19, 7, 35, 13, 32, 22, 16, 36, 4]\", \"Size of Targets\": \"[36, 20, 28, 14, 15, 16, 24, 12, 26, 18, 9, 22, 31, 13, 34, 11, 7, 35, 30, 23, 10, 37, 6, 32, 40, 27, 29, 39, 4, 19, 17, 25, 8, 38, 33, 21]\", \"Energies of Targets\": \"[26, 10, 23, 19, 9, 4, 14, 6, 11, 25, 1, 8, 2, 12, 20, 35, 24, 3, 34, 18, 36, 15, 22, 16, 21, 31, 30, 27, 28, 33, 32, 29, 5, 7, 17, 13]\", \"Storage Limit of Satellites\": \"[296, 318, 391]\", \"Energy Limit of Satellites\": \"[100, 151, 169]\", \"Ground Stations\": \"['GS3', 'GS2', 'GS1']\", \"Limit of Ground Stations\": \"[37, 38, 39]\", \"Satellite 1\": \"[27, 25, 'GS1', 'GS2', 10, 'GS3', 37, 15, 35, 14, 24, 38, 29, 16]\", \"Satellite 2\": \"[40, 24, 30, 21, 43, 23, 11, 13, 32, 38, 37, 46, 36, 35, 33, 15, 27, 10, 16, 'GS3', 44, 20, 18, 25, 'GS2', 26, 12, 17, 34, 22, 'GS1', 39, 14]\", \"Satellite 3\": \"[30, 'GS2', 20, 34, 14, 27, 41, 35, 42, 17, 10, 33, 'GS1', 37, 12, 45, 32, 18, 13, 21, 22, 29, 40, 46, 11, 'GS3', 24, 39, 38, 31, 43]\"}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "9815b8d5",
    "metadata": {},
@@ -581,7 +599,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
